# python-rag-project

./: .gitignore  README-CONFIG.md  README.md  config.yaml  create_db.py  docker-compose.yaml  factory_llm.py  main.py  pyproject.toml
chunks_db/: chroma.sqlite3
src/config/: llm_factory.py
src/service/: 1_agent_loop_langchain_tool_calling.py  database.py  rag.py  structured_output_pydantic.py  tavily.py  tools_tavily.py
